--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ requests==2.24.0
 six==1.16.0
 SQLAlchemy==2.0.25
 typing_extensions==4.9.0
-urllib3==2.1.0
+urllib3
 visitor==0.1.3
 Werkzeug==3.0.1
 WTForms==3.1.2
